# Cascade

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  README_EN.md  pyproject.toml
docs/: Cascade_long_term_plan_v3.md  walkthrough.md
docs/ideas/v0.3.0/: 2026-04-03-cas-roundtable-implementation.md  2026-04-03-cascade-md-roundtable-discussion.md  2026-04-03-cascade-md-split.md  2026-04-03-roundtable-skill-design-discussion.md  (+5 more)
docs/paper/: 00-metadata.yaml  01-introduction.md  02-related-work.md  03-architecture.md  04-agent-tools.md  05-proof-of-concept.md  06-evolution.md  07-conclusion.md  appendix-changelog.md  appendix-prompts.md  appendix-traces.md
docs/paper/_build/: Makefile  (+2 more)
docs/plans/: 2026-04-01-cascade-base-infrastructure.md  2026-04-01-cascade-cli-agent.md  2026-04-01-cascade-cli-polish-v2.md  2026-04-01-cascade-cli-polish.md  2026-04-01-cascade-llm-integration.md  2026-04-03-chinese-to-english.md  2026-04-03-input-queue-design.md  2026-04-03-input-queue.md  2026-04-04-cas-texwriter-tex-refactor.md  phase4-tools.md  phase5-permissions.md
src/cascade/: __init__.py  cli.py
tests/: test_api_client.py  test_architecture.py  test_bash_tool.py  test_bootstrap.py  test_cli.py  test_file_search_tools.py  test_integration_tool_loop.py  test_permissions.py  test_query_engine.py  test_renderer.py  test_sanity.py  test_state.py  test_tools_registry.py
tests/api/: test_client.py  test_config.py
tests/commands/: __init__.py  test_core_p0.py  test_model.py  test_router.py
tests/core/: test_agent.py  test_tool.py
tests/ui/: test_spinner.py
(+103 files in other folders)
